--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/hashtag-repo/hashtag-repo#readme",
   "dependencies": {
-    "@google-cloud/vision": "^0.10.0",
-    "axios": "^0.15.3",
+    "@google-cloud/vision": "^0.11.3",
+    "asyncawait": "^1.0.6",
+    "axios": "^0.16.2",
     "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
@@ -34,13 +35,14 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1",
+    "bcrypt": "^1.0.2",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.0.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.0",
     "express-session": "^1.15.1",
-    "material-ui": "^0.17.1",
+    "material-ui": "^0.18.3",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
     "multer": "^1.3.0",
@@ -49,15 +51,15 @@
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.4.2",
     "react-grid-layout": "^0.14.4",
-    "react-router": "^2.8.1",
-    "react-router-bootstrap": "^0.23.1",
+    "react-router": "^4.1.1",
+    "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "git+https://github.com/zilverline/react-tap-event-plugin.git",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.2",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.4.2",
@@ -66,26 +68,26 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-airbnb": "^2.2.3",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.24.0",
     "body-parser": "^1.17.1",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.6.1",
+    "chai": "^4.0.2",
+    "chai-enzyme": "^0.7.1",
     "chai-jsx": "^1.0.1",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.1",
     "enzyme": "^2.7.1",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
-    "jsdom": "^9.12.0",
+    "jsdom": "^11.0.0",
     "jsx-chai": "^4.0.0",
-    "material-ui": "^0.17.1",
+    "material-ui": "^0.18.3",
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-shallow-testutils": "^2.0.0",
+    "react-bootstrap": "^0.31.0",
+    "react-shallow-testutils": "^3.0.0",
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.4.2"
   }
